2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* de.po: Update from Karl Eichwalder.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* en@quot.po: New file.
	* en@boldquot.po: New file.

2001-03-10  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (update-gmo): New target.
	(update-po): After updating the po files, also update the gmo files.
	(dist2): New target.
	(dist): Depend on dist2, not directly on $(DISTFILES). Only after
	'update-po' has been executed, it is useful to regenerate $(GMOFILES).

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in ($(PACKAGE).pot): Depend on POTFILES.in.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: Add src/po.c, src/write-po.c.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (update-po): Use $(GMOFILES), not $(CATALOGS).

2001-03-03  Bruno Haible  <haible@clisp.cons.org>

	* ja.po: Fix invalid SJIS multibyte sequence.

2001-03-06  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (GMSGFMT, XGETTEXT): Remove useless PATH setting. The
	macros @GMSGFMT@ and @XGETTEXT@ expand to absolute pathnames.
	(MSGMERGE): Remove useless PATH setting. The gettext maintainer has
	msgmerge already installed in his PATH.

2001-02-27  Bruno Haible  <haible@clisp.cons.org>

	* nn.po: Renamed from no@nynorsk.po.

2001-02-10  Bruno Haible  <haible@clisp.cons.org>

	* ja.po: New file, from Jun Sawataishi <jsawa@ibm.net>.

2001-01-21  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (install-data, install-data-yes): Move installation
	of po/Makefile.in.in from install-data-yes to install-data, so it is
	also installed when gettext is configured with --disable-nls.

2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* no.po: Update from Trond Endrestøl <endrestol@hotmail.com>.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: src/gettext.c was renamed from src/gettextp.c.
	Add lib/obstack.c, src/open-po.c, src/po-lex.h.
