@@ -1,3 +1,7 @@
+2001-03-18  Bruno Haible  <haible@clisp.cons.org>
+
+	* POTFILES.in: Add src/ngettext.c.
+
 2001-03-11  Bruno Haible  <haible@clisp.cons.org>
 
 	* de.po: Update from Karl Eichwalder.
